--- a/notebooks/MovieScriptDB.ipynb
+++ b/notebooks/MovieScriptDB.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "[2109 rows x 14 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,6 +468,40 @@
    "source": [
     "df = postproc_moviescriptdb_metadata()\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name                                                            Batman\n",
+       "source                                                      actorpoint\n",
+       "file_name                                                       Batman\n",
+       "script_url           https://www.actorpoint.com/movie-scripts/scrip...\n",
+       "tmdb_title                                                  The Batman\n",
+       "title                                                       The Batman\n",
+       "tmdb_release_date                                           2022-03-01\n",
+       "release_date                                                      2022\n",
+       "tmdb_id                                                       414906.0\n",
+       "tmdb_overview        In his second year of fighting crime, Batman u...\n",
+       "overview             In his second year of fighting crime, Batman u...\n",
+       "imdb_title                                                  The Batman\n",
+       "imdb_release_date                                               2022.0\n",
+       "imdb_id                                                        1877830\n",
+       "Name: Batman, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc['Batman']"
    ]
   },
   {
