--- a/notebooks/BechdelTestCorpus.ipynb
+++ b/notebooks/BechdelTestCorpus.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "644fafdea72742dcbb5389e2a8401fda",
+       "model_id": "2cf568d476d24b37b21c5dda66dc6fd5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -32,10 +32,10 @@
     {
      "data": {
       "text/plain": [
-       "(_bechdel_test/BladeII-2002)"
+       "(_bechdel_test/SupermanIII-1983)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,6 +47,26 @@
     "# t=C.textd['TheAvengers-2012']\n",
     "t=C.t\n",
     "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/ryan/hello'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.expanduser('~/hello')"
    ]
   },
   {
