--- a/notebooks/BechdelTestCorpus.ipynb
+++ b/notebooks/BechdelTestCorpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75a7cbf9dcbe435188184309342af6cd",
+       "model_id": "a357bf4d24ce4d4dbaf2fbf51572b1c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -29,45 +29,41 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'num_speeches__gender_CM': 93.0,\n",
-       " 'num_speeches__gender_CM_to_notCM': 0.27514792899408286,\n",
-       " 'num_speeches__gender_notCM': 338.0,\n",
-       " 'num_speeches__race_W': 97,\n",
-       " 'num_speeches__race_W_to_notW': 0.40756302521008403,\n",
-       " 'num_speeches__race_notW': 238,\n",
-       " 'num_words__gender_CM': 2138.0,\n",
-       " 'num_words__gender_CM_to_notCM': 0.2587124878993224,\n",
-       " 'num_words__gender_notCM': 8264.0,\n",
-       " 'num_words__race_W': 2442,\n",
-       " 'num_words__race_W_to_notW': 0.42447418738049714,\n",
-       " 'num_words__race_notW': 5753,\n",
-       " 'rank_castlist__gender_CM': 18.5,\n",
-       " 'rank_castlist__gender_CM_to_notCM': 2.466666666666667,\n",
-       " 'rank_castlist__gender_notCM': 7.5,\n",
-       " 'rank_castlist__race_W': 18,\n",
-       " 'rank_castlist__race_W_to_notW': 0.782608695652174,\n",
-       " 'rank_castlist__race_notW': 23,\n",
-       " 'rank_speaking__gender_CM': 6.5,\n",
-       " 'rank_speaking__gender_CM_to_notCM': 1.4444444444444444,\n",
-       " 'rank_speaking__gender_notCM': 4.5,\n",
-       " 'rank_speaking__race_W': 12,\n",
-       " 'rank_speaking__race_W_to_notW': 1.0909090909090908,\n",
-       " 'rank_speaking__race_notW': 11}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "C=BechdelTest()\n",
-    "t=C.t\n",
-    "t.get_ratios()"
+    "t=C.t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_dynamic(id):\n",
+    "    t = C.textd[id]\n",
+    "    fn,htm = t.draw_networks()\n",
+    "    return htm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 639/639 [00:00<00:00, 6340.92it/s]\n",
+      " 49%|████████████████████████████████████████████████████████████████▏                                                                   | 311/639 [00:43<01:01,  5.36it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "draw_dynamic('AvengersEndgame-2019')"
    ]
   },
   {
