--- a/notebooks/BuildSubcorpus.ipynb
+++ b/notebooks/BuildSubcorpus.ipynb
@@ -3530,7 +3530,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ## Fixes \n",
+    "# ### Add back auto tag\n",
+    "# url_cast_meta = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRuBd6kmJroxVXWOIrr1Ebf5vKqN2LKbWijSZXyDBDdcHLd2Rp5Qo18OA8YWJ7_lMnDwDdPCHQWzFEF/pub?gid=1934597839&single=true&output=csv'\n",
+    "# df = pd.read_csv(url_cast_meta).fillna('')\n",
+    "# df_orig = pd.read_csv(os.path.join(PATH_DATA, 'data.superhero_corpus_casts.csv')).fillna('')\n",
+    "\n",
+    "# df = df.set_index(['id','rank_castlist'])\n",
+    "# df_orig = df_orig.set_index(['id','rank_castlist'])\n",
+    "# df['char_gender_auto'] = df_orig['char_gender']\n",
+    "# df['actor_gender_auto'] = df_orig['actor_gender']\n",
+    "# df.to_csv(os.path.join(PATH_DATA,'data.superhero_corpus_casts.annotated.csv'))"
+   ]
   }
  ],
  "metadata": {
